BDO|HB: Fixed CSS rule that is causing Safari on iOS to ignore first click because of CSS :hover rules. This particular rule should not have caused an issue, however replacing > *:hover with > span:hover fixes it

--- a/grunt/sass/toolkit/components/_carousel.scss
+++ b/grunt/sass/toolkit/components/_carousel.scss
@@ -176,7 +176,7 @@
       position: relative;
       margin-left:-50%;
     }
-    .container > * {
+    .container > span {
       @include border-radius(5px);
       @include inline-block;
       background:#bbb;
